--- a/style.css
+++ b/style.css
@@ -210,6 +210,7 @@ header {
 .team__member:hover {
     background: var(--box--bg);
     border-color: rgba(255, 255, 255, 0.832);
+    box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.45);
 }
 
 .team__member__image img {
@@ -362,7 +363,6 @@ footer {
     pointer-events: auto;
 }
 
-
 /* ==================== MEDIA QUERIES (TABLET - max-width: 1024px) ==================== */
 @media screen and (max-width: 1024px) {
     .container {
@@ -492,6 +492,7 @@ footer {
 
     .team__member__socials {
         height: 75%;
+        border: 1px solid white;
     }
 
     .team__member__socials a {
@@ -502,5 +503,111 @@ footer {
         font-size: 0.7rem;
         padding: 0.2rem;
     }
+}
+
+.btw-card-container {
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    /* display: block; */
+    justify-content: center;
+    background: #000000a2;
+    z-index: 999;   
+}
+
+.btw-birthday-card {
+    top: 5rem;
+    position: absolute;
+    max-width: 35rem;
+    width: 90%;
+    padding: 2.5rem;
+    border-radius: 1rem;
+    border: 3px solid rgb(255, 255, 255);
+    background-image: radial-gradient( circle 490.7px at 3.1% 21.8%,  rgba(82,6,135,1) 0%, rgb(41, 2, 63) 100.3% );
+    box-shadow: 0 0 20px rgba(209, 255, 255, 0.914), 0 20px 25px -5px rgba(117, 117, 117, 0.774), 0 10px 10px -5px rgba(170, 35, 35, 0.467);
+    z-index: 99999;
+    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+}
+
+.btw-close-button {
+    position: absolute;
+    top: 0.75rem;
+    right: 1rem;
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: rgb(255, 255, 255);
+    font-size: 2rem;
+    font-weight: 300;
+    transition: color 0.3s, transform 0.3s;
+    line-height: 1;
+    padding: 0;
+    outline: none;
+}
+.btw-close-button:hover {
+    transform: scale(1.5);
+}
+
+.btw-lottie-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.btw-person-name {
+    font-size: 2.25rem;
+    font-weight: 800;
+    color: var(--primary-blue);
+    text-align: center;
+    margin-bottom: 0.5rem;
+}
+
+#btw-person-name {
+    color: rgb(255, 208, 0);
+}
+
+.btw-wish-text {
+    font-size: 1.25rem;
+    color: var(--text-gray);
+    text-align: center;
+    line-height: 1.625;
+}
+
+@media (max-width: 640px) {
+    .btw-birthday-card {
+        padding: 2rem;
+    }
+    .btw-person-name {
+        font-size: 1.5rem;
+    }
+    .btw-wish-text {
+        font-size: 1rem;
+    }
+}
+
+
+.animation {
+    animation-name: color-shift; /* Name of the @keyframes rule */
+    animation-duration: 2s; 
+    animation-iteration-count: infinite; 
+    animation-direction: alternate; 
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes color-shift {
+  0% { 
+    color: #ffc400; 
+  }
+  35% { 
+    color: #ffff02; 
+    font-weight: 800;
+    text-shadow: 0px 0px 8px rgba(214, 186, 184, 0.578);
+    
+  }
+  75% { 
+    color: #f9f355; 
+    text-shadow: 0px 0px 8px rgba(120, 243, 107, 0.578); 
+  }
 }
 
