--- a/style.css
+++ b/style.css
@@ -398,7 +398,7 @@ footer {
     }
 
     .nav__links li {
-        padding: 1rem 0;
+        padding: 0.5rem 0;
         border: 0.5px solid #4f3e3e; 
     }
 
@@ -409,7 +409,7 @@ footer {
     .nav__links a {
         color: black; 
         padding: 0rem 1rem;
-        font-size: 1.1rem;
+        font-size: 0.8rem;
     }
 
     .nav__links a::after {
@@ -483,7 +483,7 @@ footer {
     }
 
     .team__member:hover {
-        border: 2px solid var(--color-primary); 
+        border: 1.5px solid white; 
     }
     
     .team__member__image img {
